# digitex

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  CONTEXT.md  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
.claude/: settings.local.json
cli/: create_dataset.py  create_train_data.py  init_db.py  train.py
digitex/core/: handlers.py  img.py  utils.py
digitex/core/creators/: base.py  page.py  part.py  question.py  word.py
digitex/extraction/: create_db.py
digitex/extraction/components/: managers.py
digitex/training/fast/: run.txt
digitex/training/svtr/: augment_words.py  create_dataset.py
digitex/training/yolo/: create_train_data.py  requirements.txt
docs/: README.md  data-update.md  database-reference.md  database.md  deployment.md  extraction.md  label-studio.md  local-setup.md  manual-extraction.md  production.md  todo.md  training.md
docs/adr/: 0001-settings-injection.md  0002-conflict-resolver-shape.md  0003-bot-answer-flow-seam.md  README.md
docs/superpowers/plans/: 2026-03-28-background-removal.md
docs/superpowers/specs/: 2026-03-28-background-removal-design.md  2026-03-28-increase-darkness-design.md  2026-03-28-white-background-design.md
extract/: convert_to_md.py  create_db.py  extract.py  processors.py
extract/components/: extractor.py  managers.py  ui.py  utils.py
extract/custom/: extract.py  extractor.py  script.sql
extract/inputs/: info.json
extract/marker/: extract.py  extractor.py  processors.py
extraction/: cli.py  run.py  tune_segment_processor.py
migrations/: env.py  script.py.mako
migrations/versions/: 0001_initial_schema.py  0002_session_answers_add_part.py
modules/: anns_converter.py  data_creator.py  data_creator_new.py  handlers.py  predictors.py  processors.py  utils.py
modules/config/: __init__.py  settings.py
modules/predictors/: abstract_predictor.py  prediction_result.py
scripts/: docker-entrypoint.sh  populate_db.py  script.sql
src/digitex/: __init__.py  logging.py  settings.py  utils.py
src/digitex/bot/: __init__.py  answer_flow.py  callbacks.py  constants.py  database.py  deps.py  fsm_data.py  keyboards.py  messages.py  middleware.py  renderer.py  schemas.py  states.py
src/digitex/cli/: __init__.py  bot.py  db.py  extraction.py  training.py
src/digitex/config/: __init__.py  settings.py
src/digitex/core/: __init__.py  anns_converter.py  answer.py  corpus.py  domain.py  extractor.py  ocr.py  page_creator.py  utils.py  value_objects.py
src/digitex/creators/: __init__.py  page_creator.py
src/digitex/extractors/: __init__.py  answers_extractor.py  base.py  book_extractor.py  conflict_resolution.py  exceptions.py  extractor.py  factory.py  manual_extractor.py  page_extractor.py  progress.py  tests_extractor.py  utils.py
src/digitex/label_studio/: __init__.py  client.py  geometry.py  predictor.py  uploader.py
src/digitex/ml/: __init__.py
src/digitex/services/: __init__.py  answer_validator.py
tests/: __init__.py  _test_data_creator.py.bak  conftest.py  test_bot_handlers.py  test_bot_keyboards.py  test_bot_messages.py  test_bot_schemas.py  test_bot_states.py  test_converter.py  test_corpus.py  test_creators.py  test_data_creator.py  test_douglas_peucker.py  test_extractors.py  test_handlers.py  test_image_processing_edge_cases.py  test_label_studio.py  test_ls_geometry.py  test_manual_extractor.py  test_ocr.py  test_predictors.py  test_processors.py  test_question_round.py  test_repositories.py  test_schemas.py  test_training.py  test_utils.py
tests/extractors/: test_answers_extractor.py
tests/integration/: conftest.py  test_repositories.py
tests/test_config/: test_settings.py
tests/training/: test_add_images.py  test_dataset_creator.py  test_trainer.py
tests/unit/: test_answer.py  test_answer_flow.py  test_answer_validator.py  test_answers_extractor.py  test_bot_handlers.py  test_bot_keyboards.py  test_bot_messages.py  test_domain.py  test_extractors.py  test_image_processing.py  test_label_studio.py  test_manual_extractor.py  test_ocr.py  test_page_extractor.py  test_predictors.py  test_settings.py  test_utils.py  test_yolo_dataset.py
training/: cli.py  create_train_data.py  data_creator.py  processors.py
training/OCR/: create_train_data.py
training/configs/: page.yaml  page_train.yaml  page_val.yaml
training/craft/: create_train_data.py
training/craft/components/: data.py  (+1 more)
training/fast/: run.txt
training/mask2former/: create_dataset.py  create_train_data.py  dataset.py  requirements.txt  train.py
training/oneformer/: class_info_file.json  preprocessor_config.json  train.py
training/parseq/: create_dataset.py  create_train_data.py  run.txt
training/scripts/: delete_skipped_images.py  rename_labels.py  upload_labels.py
training/svtr/: create_dataset.py  run.txt
training/svtr2/: run.txt
training/table-transformer/: create_train_data.py
training/yolo/: create_dataset.py  create_train_data.py  preparator.py  prepare.py  requirements.txt  run.txt  train.py  trainer.py
(+133 files in other folders)
