[project]
name = "digitex"
version = "0.1.0"
description = "Document digitization toolkit"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
  "pillow",
  "numpy",
  "opencv-python",
  "pypdfium2",
  "torch",
  "torchvision",
  "torchaudio",
  "ultralytics",
  "supervision",
  "albumentations",
  "tqdm",
  "pyyaml",
  "doxapy",
  "typer",
  "pytest",
  "pydantic>=2.0",
  "pydantic-settings>=2.0",
  "pytesseract",
  "deskew",
  "label-studio-sdk",
  "nvidia-ml-py>=12.0.0",
  "structlog>=25.5.0",
  "shapely>=2.1.2",
  "legacy-cgi>=2.6.4",
  "label-studio>=1.23.0",
  "aiogram>=3.27.0",
  "graphifyy>=0.7.11",
  "psycopg[binary,pool]>=3.2",
  "alembic>=1.13",
  "python-dotenv>=1.0",
]


[[tool.uv.index]]
name = "pytorch-cu130"
url = "https://download.pytorch.org/whl/cu130"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cu130" }
torchvision = { index = "pytorch-cu130" }

[tool.uv.extra-build-dependencies]
htmlmin = ["legacy-cgi"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
    "ruff>=0.15.9",
    "ty>=0.0.28",
    "mdformat>=1.0.0",
    "pre-commit>=4.0.0",
    "testcontainers[postgres]>=4.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/digitex"]

[project.scripts]
digitex-extract = "digitex.cli.extraction:app"
digitex-train = "digitex.cli.training:app"
digitex-bot = "digitex.cli.bot:app"
digitex-db = "digitex.cli.db:app"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "--cov=src/digitex --cov-report=term-missing"
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
filterwarnings = [
    "ignore::DeprecationWarning:pytz",
    "ignore::pydantic.PydanticDeprecatedSince20:label_studio_sdk",
]

[tool.ty.environment]
python-version = "3.13"

[tool.ruff]
target-version = "py313"
line-length = 88
src = ["src"]

[tool.ruff.lint]
select = [
    "E", "W", "F", "I", "B", "C4", "UP", "ARG", "PT", "TCH", "RUF",
    "PL",
    "SIM",
    "RET",
    "PTH",
    "D",
]
ignore = [
    "D100", "D101", "D102", "D103", "D104", "D105", "D107",
    "D203",
    "D213",
    "PLR0913",
    "PLR2004",
    "PLC0415",
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["ARG", "PLR2004", "S101"]

[tool.ruff.lint.pylint]
max-args = 8
max-returns = 10

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.flake8-bugbear]
extend-immutable-calls = ["typer.Argument", "typer.Option"]

[tool.ruff.lint.isort]
known-first-party = ["digitex"]
